--- a/doc/INSTALL
+++ b/doc/INSTALL
@@ -40,7 +40,7 @@ How to Install VBoxAdm
 - Postfix 2.6+
 
 Debian based (Debian, Ubuntu):
-  aptitude install perl perltidy libdbi-perl libdbd-mysql-perl libconfig-std-perl libtest-pod-perl libmail-sender-perl libcgi-application-perl libcgi-application-basic-plugin-bundle-perl libcgi-application-extra-plugin-bundle-perl famfamfam-silk-png libmime-encwords-perl libhtml-clean-perl libtemplate-perl lighttpd mysql-server php5-cgi postfix dovecot-imapd libcrypt-generatepassword-perl libdata-password-perl
+  aptitude install perl perltidy libdbi-perl libdbd-mysql-perl libconfig-std-perl libtest-pod-perl libmail-sender-perl libcgi-application-perl libcgi-application-basic-plugin-bundle-perl libcgi-application-extra-plugin-bundle-perl famfamfam-silk-png libmime-encwords-perl libhtml-clean-perl libtemplate-perl lighttpd mysql-server php5-cgi postfix postfix-pcre postfix-mysql dovecot-imapd libcrypt-generatepassword-perl libdata-password-perl
 
 Red Hat based (RHEL, CentOS, Fedora):
   yum install perl perltidy perl-DBI (and others)
@@ -87,10 +87,6 @@ skip InnoDB.
 $> mysql -uroot -p<MYSQL-ROOT-PW>
 mysql> CREATE DATABASE vboxadm;
 mysql> CREATE DATABASE roundcube;
-
-* Load Schema
--------------
-$> mysql -uroot -p vboxadm < doc/mysql/schema.sql
 
 * Create Database Accounts
 --------------------------
@@ -175,6 +171,13 @@ dbuser=vboxadm
 dbpass=<PASSWORD>
 dbdb=vboxadm
 dbhost=localhost
+
+* Initialize the Database
+-------------------------
+Initialize the Database:
+	$> mysql -uvboxadm -p<PASSWORD> vboxadm < doc/mysql/schema.sql
+
+Debian: The schema is located at /usr/share/doc/vboxadm-common/examples/mysql/schema.sql!
 
 * Configure Vacation
 --------------------
