--- a/doc/TODO
+++ b/doc/TODO
@@ -15,15 +15,25 @@ Make sure class-C ip subnet auto-whitelists are supported
 
 - SmtpProxy:
 -- Multiple target SMTP servers (fail over, load balancing)
+-- Finish/Test XFORWARD handling
+-- Evaluate use of XCLIENT extension
+-- After process_request log After-Filter Postfix Queue ID, Remote IP, Helo, Auth-Type, etc.
+-- Test XFORWARD w/ and w/o SMTP-AUTH
+
 - All:
 -- Multiple databaser servers (fail over, load balancing)
 
 - Vacation:
 -- add vacation blacklist to list senders which never get an reply
 -- Test new vacation query
+-- add vacation blacklist GUI
 
 - RFC Notfiy:
 -- finish 'you've been blocked' RFC notify cronjob
+-- test rfc notify
+
+- AWL Cron:
+-- add auto whitelist cron + DB + GUI
 
 - Extensions:
 -- Add "customer extension"
