Improve status messages.

--- a/doc/TODO
+++ b/doc/TODO
@@ -39,6 +39,10 @@ Make sure class-C ip subnet auto-whitelists are supported
 -- Add multi-ip sendout extension
 
 - Translation:
--- Translate status messages
+-- Translate status messages*
+
+- CGI::Application:
+-- add ActionDispatch when Bug #65224 is fixed
+-- add Data::Page for Paging
 
 * - in progress
