Add exim4 config, add lighttpd fcgi config. Add FastCGI script.

--- a/doc/TODO
+++ b/doc/TODO
@@ -38,6 +38,12 @@ Make sure class-C ip subnet auto-whitelists are supported
 -- Translate status messages*
 
 - CGI::Application:
--- add ActionDispatch when Bug #65224 is fixed
+-- add ActionDispatch when Bug #65224 is fixed - test if cgi.fix_pathinfo = 1 solves this issue
+
+- Aliases:
+-- allow multiple entries for each alias, i.e. make UNIQUE(local_part,domain_id,goto) and use GROUP_CONCAT
+
+- FastCGI:
+-- test/debug FastCGI
 
 * - in progress
