--- a/doc/TODO
+++ b/doc/TODO
@@ -45,5 +45,7 @@ Make sure class-C ip subnet auto-whitelists are supported
 
 - FastCGI:
 -- test/debug FastCGI
+-- see http://cgi-app.org/index.cgi?FastCGI
+-- see https://docs.google.com/Doc?docid=0AY-OcCA2-lySZGQzNjNmZzlfNzdnYjRoZGg3Yg&hl=en#FastCGI_8880821961767984
 
 * - in progress
