--- a/doc/TODO
+++ b/doc/TODO
@@ -48,5 +48,12 @@ Make sure class-C ip subnet auto-whitelists are supported
 -- see http://cgi-app.org/index.cgi?FastCGI
 -- see https://docs.google.com/Doc?docid=0AY-OcCA2-lySZGQzNjNmZzlfNzdnYjRoZGg3Yg&hl=en#FastCGI_8880821961767984
 
+- Mailarchive:
+-- create a mailarchive using always_bcc and a custom postfix transport
+-- mailarchive will be perl script called on demand or delivered to via SMTP/LMTP
+-- will store every mail passing through the mailserver, signing it and extracting meta-data
+
+- Maillog
+
 * - in progress
 
