Major refactoring: - Rename DovecotPW to SaltedHash - Rename API::* to Model::* - Use OOP w/ Class::Std for Model
Signed-off-by: Dominik Schulz <dominik.schulz@gauner.org>

--- a/doc/TODO
+++ b/doc/TODO
@@ -47,5 +47,7 @@ Make sure class-C ip subnet auto-whitelists are supported
 - Roundcube Plugin
 -- Use HTTP API once finished, this will reduce the logic reguired in the plugin to a minmal core
 
+- Evaluate Dancer
+
 * - in progress
 
