--- a/doc/TODO
+++ b/doc/TODO
@@ -8,7 +8,16 @@ relay_domains = proxy:mysql:/etc/postfix/maps/virtual_relay_domains.cf
 -- Data-Storage:
  * own Table -> clean db layout, possible duplication of domains (already possible with alias domains)
  * modify domains table -> cluttered db, no duplication of domains
+ --> virtual_domain_maps.cf: + AND NOT is_relay_domain
+ --> add table transport_map to store the transport maps
  * need to store "target" for transport maps
+ 
+- Role Accounts
+-- support role account aliases, i.e. user@*, e.g. postmaster@* -> admin@domain.tld
+| id | name | local_part | domain | ts |
+   . | postmaster | admin | domain.tld |
+SELECT CONCAT(local_part,'@',domain) AS goto FROM role_accounts WHERE name = '%u' AND domain <> '%d'
+-- access_recipient-rfc should use this table, too
 
 - Enhance vboxadm.pl to provide full cli functionality
 
