Fix Utils Testcases. Work on Mailbox API.
Signed-off-by: Dominik Schulz <dominik.schulz@gauner.org>

--- a/doc/TODO
+++ b/doc/TODO
@@ -64,7 +64,8 @@ Make sure class-C ip subnet auto-whitelists are supported
 - Roundcube Plugin
 -- Use HTTP API once finished, this will reduce the logic reguired in the plugin to a minmal core
 
-- Evaluate Dancer
+- Evaluate Perl Dancer
+- Evaluate http://mojolicio.us/
 
 * - in progress
 
