--- a/doc/TODO
+++ b/doc/TODO
@@ -2,7 +2,9 @@ TODO:
 
 - Improve Build-Script
 -- compress templates
--- move build scripts to build/
+
+- Improve design
+-- format forms
 
 - Quotas
 
