--- a/doc/TODO
+++ b/doc/TODO
@@ -63,3 +63,8 @@ Make sure class-C ip subnet auto-whitelists are supported
 - Evaluate Moose
 
 - Support recipient_delimiter different from #
+
+- Bugs/Errors:
+* no-fork option for vboxadm-(sa|ma) doesn't work atm.
+* replace Net::Fork's syslogging by VBoxAdm::Logger
+* Debian-Packaging: add postgrey, add policyd-weight, add postfix-mysql, add postfix-pcre, add mooose, add libnamespace-autoclean-perl
