--- a/doc/INSTALL
+++ b/doc/INSTALL
@@ -47,7 +47,7 @@ How to Install VBoxAdm
 - Postfix 2.6+
 
 Debian based (Debian Squeeze, Ubuntu):
-  aptitude install perl perltidy libdbi-perl libdbd-mysql-perl libconfig-std-perl libtest-pod-perl libmail-sender-perl libcgi-application-perl libcgi-application-basic-plugin-bundle-perl libcgi-application-extra-plugin-bundle-perl famfamfam-silk-png libmime-encwords-perl libhtml-clean-perl libtemplate-perl lighttpd mysql-server php5-cgi postfix postfix-pcre postfix-mysql dovecot-imapd
+  aptitude install perl perltidy libdbi-perl libdbd-mysql-perl libconfig-std-perl libtest-pod-perl libmail-sender-perl libcgi-application-perl libcgi-application-basic-plugin-bundle-perl libcgi-application-extra-plugin-bundle-perl famfamfam-silk-png libmime-encwords-perl libhtml-clean-perl libtemplate-perl lighttpd mysql-server php5-cgi postfix postfix-pcre postfix-mysql dovecot-imapd postgrey policyd-weight libmail-spamassassin-perl libnet-imap-perl libjson-perl libreadonly-perl libcgi-fast-perl libcrypt-cbc-perl libdigest-perl libtext-csv-perl libdigest-md5-file-perl
 
 Red Hat based (RHEL, CentOS, Fedora):
   yum install perl perltidy perl-DBI spamassassin mysql-server perl-Locale-Maketext-Simple perl-Text-CSV_XS perl-Readonly perl-Net-Server perl-Data-Password perl-Data-Page perl-CGI-Application-Plugin-Authentication perl-CGI-Application-Plugin-TT perl-CGI-Application-Plugin-DBH perl-CGI-Application-Plugin-Redirect perl-CGI-Application-Plugin-Session perl-Template-Toolkit perl-FCGI perl-Class-Std perl-DBD-MySQL perl-DBI
